--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -1,9 +1,8 @@
 <div class="logo" style="background-color:#0072bb; padding: 20px;">
     <a href="https://www.creative-tim.com" class="simple-text" style="color: white;">
         <div >
-            <img src="./assets/img/logo_argentina_unida-blanco.svg"/>
+            Escuelas CABA<!-- <img src="./assets/img/logo_argentina_unida-blanco.svg"/> -->
         </div>
-        IMPORTADOR GDE
     </a>
 </div>
 <div class="sidebar-wrapper">
