--- a/frontend/src/app/components/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="logo" style="background-color:#0072bb; padding: 20px;">
     <a href="https://www.creative-tim.com" class="simple-text" style="color: white;">
         <div >
-            Escuelas CABA<!-- <img src="./assets/img/logo_argentina_unida-blanco.svg"/> -->
+            EDUGEO<!-- <img src="./assets/img/logo_argentina_unida-blanco.svg"/> -->
         </div>
     </a>
 </div>
